bug squishin

--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,26 +1,29 @@
+.container {
+  /* background-color: rgb(224, 243, 226); */
+}
 .background {
-  /* background-image: url("https://blog.goodsam.com/wp-content/uploads/2021/01/Lead-Pic-GettyImages-1191438643b.jpg"); */
-  background-color: black;
+  background-image: url("https://blog.goodsam.com/wp-content/uploads/2021/01/Lead-Pic-GettyImages-1191438643b.jpg");
   width: 100%;
-  /* background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; */
-  height: 87vh;
+  background-size: cover;
+  height: 65vh;
 }
 
 .center {
   margin: auto;
-  width: 600px;
+  /* width: 600px; */
   display: block;
 }
 
 .logo {
-  padding-top: 150px;
-  width: 200px;
+  margin-top: 80px;
+  padding-top: 40px;
+  width: 250px;
 }
 
-.title {
+h1 {
   font-size: 300%;
   font-family: "Cinzel", serif;
   margin-top: 50px;
@@ -29,4 +32,79 @@
 .subtitle {
   font-size: 200%;
   font-family: "Cinzel", serif;
+}
+
+.row {
+  padding-top: 100px;
+}
+
+.col-sm {
+  max-width: 400px;
+}
+
+.small-img {
+  max-width: 300px;
+  height: 300px;
+  border-radius: 10px;
+}
+.small-screen {
+  display: none;
+}
+
+p {
+  font-family: "Montserrat", sans-serif;
+  text-align: left;
+}
+.btn {
+  margin: 10px;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid grey;
+  border-radius: 10px;
+}
+
+.socials {
+  margin: 10px;
+}
+
+.socials a {
+  font-size: 30px;
+  padding: 10px;
+  color: rgb(77, 76, 76);
+}
+
+.links {
+  margin: auto;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-evenly;
+  width: 350px;
+  font-size: 13px;
+}
+
+a,
+a:hover,
+a:active,
+a:visited,
+a:focus {
+  text-decoration: none;
+  color: black;
+  font-family: "Cinzel", serif;
+  /* font-size: 18px; */
+}
+@media only screen and (max-width: 578px) {
+  .large-screen {
+    display: none;
+  }
+  .small-screen {
+    display: unset;
+  }
+  p {
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .logo {
+    margin-top: 50px;
+  }
 }
